Fixed alignment

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -433,6 +433,7 @@ footer .footer-below {
 .portfolio-modal .modal-content h2 {
     margin: 0;
     font-size: 3em;
+    text-align: center;
 }
 
 .portfolio-modal .modal-content img {
@@ -451,6 +452,7 @@ footer .footer-below {
     height: 75px;
     background-color: transparent;
     cursor: pointer;
+    text-align: center;
 }
 
 .portfolio-modal .close-modal:hover {
